# project_5

./: .env.sample  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt  version.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_add_payments_py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_300a7f43993f905c_0001_initial_py.html  z_300a7f43993f905c_0002_course_creator_lesson_creator_py.html  z_300a7f43993f905c_0003_subscription_py.html  z_300a7f43993f905c___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_e7c45762ecaa8ffb___init___py.html  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginations_py.html  z_e7c45762ecaa8ffb_serialilers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serialilers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_payment_py.html  z_fff39e3ca0aaeed4_0003_alter_user_groups_alter_user_is_active_py.html  (+2 more)
lms/: admin.py  models.py  serialilers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_creator_lesson_creator.py  0003_subscription.py  0004_course_price_lesson_price.py  0005_course_updated_at.py
nginx/: nginx.conf
users/: admin.py  models.py  permissions.py  serialilers.py  services.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_groups_alter_user_is_active.py  0004_alter_user_groups_alter_user_is_active.py  0005_alter_user_groups_alter_user_is_active.py  0007_alter_payment_method.py  (+5 more)
(+1 files in other folders)
